# Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_AUX_DIR(config)

SUBDIRS="src"

CFLAGS="-DNORMALUNIX -DLINUX -Os"

OUTPATH="bin"

INSTALL="./config/install-sh -c"

sbindir="/usr/local/sbin"
etcdir="/etc"
startupdir="/etc/rc.d/init.d"
mandir="/usr/share/man"

if test ! -d "$OUTPATH"; then
	echo "creating the output directory $OUTPATH"
	mkdir "$OUTPATH"
fi

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_CHECK_PROG(AR,ar,ar,:)

AC_CHECK_LIB([nsl], [gethostbyname])
AC_CHECK_LIB([socket], [bind])

# Check for command-line stuff
AC_ARG_ENABLE(enable_debug,
	[  --enable-debug         compile with debug information (no)])


if test "$enable_debug" = "yes"; then
	CFLAGS="$CFLAGS -g -Wall -DDEBUG"
	BUILD_MODE="debug"
else
	CFLAGS="$CFLAGS -O3 -Wall -s"
	BUILD_MODE="release"
fi

OUTPUT_FILES="Makefile src/Makefile"

AC_PROG_MAKE_SET
AC_SUBST(CFLAGS)
AC_SUBST(SUBDIRS)
AC_SUBST(OUTPATH)
AC_SUBST(INSTALL)
AC_SUBST(OUTPUT_FILES)
AC_SUBST(sbindir)
AC_SUBST(etcdir)
AC_SUBST(startupdir)
AC_SUBST(mandir)

AC_OUTPUT([
			Makefile
			src/Makefile
			scripts/routed
			pkg-slack.sh
			pkg-deb.sh
                        nx-routed.spec
		  ] )
		 
chmod +x pkg-slack.sh
chmod +x pkg-deb.sh
echo 
echo libkld build mode is: $BUILD_MODE
echo 
